<resources>
    <string name="app_name">Verma_Dam</string>
    <string name="news_thumbnail">News thumbnail</string>
    <string name="enter">Enter Keyword</string>
    <string name="search">Search</string>
    <string name="article_photo">Article Photo</string>
    <string name="source">Source:</string>
    <string name="author">Author:</string>
    <string name="publish_date">Published At:</string>
    <string name="origin">Original Story:</string>
    <string name="results">Showing Results For:</string>
    <string name="ourNames">Yogesh Kumar Verma and Eric Dam</string>
    <string name="news">News</string>
    <string name="live">Live</string>
</resources>