<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewsDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/news_item_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:gravity="start"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/news_item_desc"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="@dimen/news_item_meta"
            android:textColor="@color/text_color_dark"
            android:text="@string/source"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="@dimen/news_item_meta"
            android:textColor="@color/text_color_dark"
            android:text="@string/author"
            app:layout_constraintTop_toBottomOf="@id/source" />

        <TextView
            android:id="@+id/publish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="@dimen/news_item_meta"
            android:textColor="@color/text_color_dark"
            android:layout_marginBottom="30dp"
            android:text="@string/publish_date"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <ImageView
            android:id="@+id/article_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/article_photo"
            app:layout_constraintTop_toBottomOf="@id/publish_date" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/text_color_dark"
            android:paddingVertical="10dp"
            android:textSize="@dimen/news_item_content"
            app:layout_constraintTop_toBottomOf="@id/article_photo" />

        <TextView
            android:id="@+id/original_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_item_meta"
            android:textColor="@color/text_color_dark"
            android:gravity="center"
            android:text="@string/origin"
            app:layout_constraintTop_toBottomOf="@id/content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>